--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-30  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* head.src : added a link in the head section announcing the rss
+	(patch sent by Rafael Margin aka pachi)
+
 2004-09-29  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* feed.py: added link support
