--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-11    <lgs@sicem.biz>
+
+	* articles.src: added a row for Patrick Wagstrom article
+
 2004-11-09    <lgs@sicem.biz>
 
 	* newsitems.py (item): added a newsitem for that tutorial
