fixed mistake with octal dates
	* newsitems.py (item): fixed mistake with octal dates

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-11-11    <lgs@sicem.biz>
 
+	* newsitems.py (item): fixed mistake with octal dates
+
 	* articles.src: added a row for Patrick Wagstrom article
 
 2004-11-09    <lgs@sicem.biz>
