--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-19  Christian Reis <kiko@async.com.br>
+
+	* head.src: commenting out bonsai and LXR links, they're dead
+
 2004-11-16  John Finlay  <finlay@moeraki.com>
 
 	* newsitems.py (item): New ref manual 2.5.0.
