--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-13  Xavier Ordoquy <xordoquy@linovia.com>
+
+	* applications.py: changed pyirc website.
+
 2004-12-01    <lgs@sicem.biz>
 
 	* newsitems.py (item): added items for pygtk, gnome-python and
