updated spanish translation
	* tutorial.src: updated spanish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-21    <lgs@sicem.biz>
+
+	* tutorial.src: updated spanish translation
+
 2004-12-13  Xavier Ordoquy <xordoquy@linovia.com>
 
 	* applications.py: changed pyirc website.
