--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-12-29  Christian Reis <kiko@async.com.br>
+
+	* downloads.src: Nikos Kouremenos <kourem@gmail.com> pointed out
+	that 2.4.1 is the latest release, not 2.4.0. I decided to nuke
+	all the version numbers out of that page.
+
 2004-12-24  John Finlay  <finlay@moeraki.com>
 
 	* newsitems.py: PyGTK 2.0 Tutorial v2.3
