--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 	that 2.4.1 is the latest release, not 2.4.0. I decided to nuke
 	all the version numbers out of that page.
 
+	* applications.src: really fixed link for pyirc
+
 2004-12-24  John Finlay  <finlay@moeraki.com>
 
 	* newsitems.py: PyGTK 2.0 Tutorial v2.3
@@ -28,7 +30,7 @@
 
 2004-12-13  Xavier Ordoquy <xordoquy@linovia.com>
 
-	* applications.py: changed pyirc website.
+	* applications.src: changed pyirc website.
 
 2004-12-01    <lgs@sicem.biz>
 
