--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-18  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* newsitems.py (item): some news about gnome-python 2.9.4 and gazpacho
+	0.3.2
+
 2004-01-14  Johan Dahlin  <johan@gnome.org>
 	
 	* newsitem.py: Add PyGTK 2.5.2
