added PyComicsViewer and XPN
	* applications.src: added PyComicsViewer and XPN

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-20  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* applications.src: added PyComicsViewer and XPN
+
 2005-01-19  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* tutorial.src: updated version for spanish tutorial
