--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-21  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* applications.src: added Gazpacho and Sabayon
+
 2005-02-04  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* newsitems.py (item): added item for Gazpacho 0.5.0
