--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-03  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* applications.src: added Gajim
+
 2005-01-23  Johan Dahlin  <johan@gnome.org>
 
         * newsitems.py (item): PyGTK 2.5.3
