--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-12  Christian Reis <kiko@async.com.br>
+
+	* head.src: Adding a link to our new Wiki!
+
 2005-04-10  John Finlay  <finlay@moeraki.com>
 
 	* newsitems.py: Added ref 2.6.0 announcement
