--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-07  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* applications.src: added Pyne
+
 2005-05-03  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* applications.src: added DelVJ, OnTV, Serpentine and
