--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-09  Johan Dahlin  <jdahlin@async.com.br>
+
+	* applications.src: Added SMEG
+
 2005-05-07  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* applications.src: added Pyne
