--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-05-10  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
+	* Makefile (SRC_PAGES): add consulting.src to the list
+	of src pages
+
 	* applications.src: Added Quod Libet
 
 2005-05-09  Johan Dahlin  <jdahlin@async.com.br>
