Update url for sabayon
    * applications.src: Update url for sabayon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-05-10  Johan Dahlin  <jdahlin@async.com.br>
 
+	* applications.src: Update url for sabayon
+
 	* default.css: 
 	* consulting.src: Added Sicem and update style
 
