--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-23  Christian Reis <kiko@async.com.br>
+
+	* applications.src: Fixed up Gajim.
+
 2005-05-21  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* newsitems.py: Advertise the new docs.
@@ -9,11 +13,11 @@
 	documentation.
 
 2005-05-19  Rafael Villar Burke <pachi@mmn-arquitectos.com>
- 
-  	* applications.src: Added Aeternal, The Orange Slice,
- 	Pybber, PyMServ, RoutePlanner, Tennacles, GnoFract4D, OpenEV,
+
+	* applications.src: Added Aeternal, The Orange Slice,
+	Pybber, PyMServ, RoutePlanner, Tennacles, GnoFract4D, OpenEV,
 	IceMe.
- 
+
 2005-05-18  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* newsitems.py (item): added gnomepython 2.11.2 and
