fix typo and link target
	* feedback.src: fix typo and link target

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-30  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* feedback.src: fix typo and link target
+
 2005-05-24  Rafael Villar Burke <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added CeeMedia.
