--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-12  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* documentation/pygnomeprint.tar.bz2: Update gnomeprint docs.
+
 2005-06-04  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* documentation/pygnomeprint.tar.bz2: Update gnomeprint docs.
