--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-14  Johan Dahlin  <jdahlin@async.com.br>
+
+	* consulting.src: Add Quuxo and a template
+
 2005-06-12  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* documentation/pygnomeprint.tar.bz2: Update gnomeprint docs.
