--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-16  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* Makefile, reference.src, documentation/pygnomeprint.tar.bz2: Add
+	gnomeprint.ui docs, by Gian Mario Tagliaretti.
+
 2005-06-14  Johan Dahlin  <jdahlin@async.com.br>
 
 	* consulting.src: Add Quuxo and a template
