--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-24  Johan Dahlin  <jdahlin@async.com.br>
+
+	* applications.src: Add Griffith
+
 2005-06-21  Christian Reis <kiko@async.com.br>
 
 	* .htaccess: make default charset iso-8859-1, as per report by
