--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-10  Johan Dahlin  <johan@gnome.org>
+
+	* newsitems.py (item): Add 2.7.0.
+
 2005-06-24  Johan Dahlin  <jdahlin@async.com.br>
 
 	* applications.src: Add Griffith
