--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-22  Johan Dahlin  <jdahlin@async.com.br>
+
+	* newsitems.py (item): Add 2.7.1.
+
 2005-07-10  Johan Dahlin  <johan@gnome.org>
 
 	* newsitems.py (item): Add 2.7.0.
