--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-02  Johan Dahlin  <jdahlin@async.com.br>
+
+	* newsitems.py (item): Add 2.7.2.
+
 2005-07-22  Johan Dahlin  <jdahlin@async.com.br>
 
 	* newsitems.py (item): Add 2.7.1.
