--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-08  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Added Guten, pyRadar, TimPlayer and TinyERP.
+
 2005-08-02  Johan Dahlin  <jdahlin@async.com.br>
 
 	* newsitems.py (item): Add 2.7.2.
