--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-10  Johan Dahlin  <jdahlin@async.com.br>
+
+	* newsitems.py (item): Add 2.7.3.
+	* download.src: Update to 2.6.
+
 2005-08-08  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added Guten, pyRadar, TimPlayer and TinyERP.
