--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Added PenguinTV, SBackup.
+
 2005-08-10  Johan Dahlin  <jdahlin@async.com.br>
 
 	* newsitems.py (item): Add 2.7.3.
