--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+005-08-15  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Added Gnome Sudoku and pykanjicard, added
+	music and gaming sections.
+
 2005-08-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added PenguinTV, SBackup.
@@ -190,7 +195,7 @@
 
 2005-01-23  Johan Dahlin  <johan@gnome.org>
 
-        * newsitems.py (item): PyGTK 2.5.3
+	* newsitems.py (item): PyGTK 2.5.3
 
 2005-02-21  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
