--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-24  Johan Dahlin  <jdahlin@async.com.br>
+
+	* newsitems.py (item): Add 2.7.4.
+
 2005-08-17  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added Gnome Torrent and
