--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-06  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Added Z88transfer
+
 2005-09-02  Johan Dahlin  <jdahlin@async.com.br>
 
 	* downloads.src:
