--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-07  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Added Echelon Applet
+
 2005-09-06  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added Z88transfer
