--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-09-07  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
+	* applications.src: Added PySnippet
+
+2005-09-07  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
 	* applications.src: Added Echelon Applet
 
 2005-09-06  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
