Added Shrinking Man Diet Tracker
2005-09-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * applications.src: Added Shrinking Man Diet Tracker

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Added Shrinking Man Diet Tracker
+
 2005-09-07  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added PySnippet
