--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* articles/bitpodder/*: Added bitpodder article files
+
 2005-09-12  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added Shrinking Man Diet Tracker
