--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2005-09-14  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
-	* applications.src: Added gpodder, Nixory
+	* applications.src: Added gpodder, Nixory, gquilt
 
 2005-09-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
