Added GXFormer, Comix.
2005-09-14  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * applications.src: Added GXFormer, Comix.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2005-09-14  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
-	* applications.src: Added gpodder, Nixory, gquilt
+	* applications.src: Added gpodder, Nixory, gquilt, GXFormer
+                            Comix.
 
 2005-09-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
