--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2005-09-14  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added gpodder, Nixory, gquilt, GXFormer
-                            Comix, Pida.
+                            Comix, Pida, PyBridge.
 
 2005-09-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
