Added bitpodder article (by Netza Gilbert)
2005-09-14  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * articles.src: Added bitpodder article (by Netza Gilbert)

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* applications.src: Added gpodder, Nixory, gquilt, GXFormer
                             Comix, Pida, PyBridge.
+	* articles.src: Added bitpodder article (by Netza Gilbert)
 
 2005-09-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
