--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-15  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+        * applications.src: Added QA-Assistant
+
 2005-09-14  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added gpodder, Nixory, gquilt, GXFormer
