--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
         * articles.src: Fix missing end-quotes
 	* newsitems.py: Added new article notice by Nzeka Gilbert
+	* applications.src: Added Scribes
 
 2005-09-17  John Finlay  <finlay@moeraki.com>
 
