--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-04  Johan Dahlin  <jdahlin@async.com.br>
+
+	* newsitems.py (item): PyGTK 2.8.1
+
 2005-09-21  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
         * articles.src: Fix missing end-quotes
