--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-10-04  Johan Dahlin  <jdahlin@async.com.br>
 
+	* newsitems.py (item): PyGTK 2.8.2
+
+2005-10-04  Johan Dahlin  <jdahlin@async.com.br>
+
 	* newsitems.py (item): PyGTK 2.8.1
 
 2005-09-21  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
