--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-17  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Added Pybliographer
+
 2005-10-14  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added PySudoku
