--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-24  Thomas Wood  <thos@gnome.org>
+
+	* img/gnome-64.png: Updated to new version
+
 2005-10-18  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added PyNeighborhood
