--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-16  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Added Pygmy
+
 2005-11-11  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added PyConsole widget
