--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* articles.src: Add temporarily offline notice
+
 2005-11-23  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Added PyGG
