--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Added Gnome-schedule
+
 2006-01-02  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* newsitems.py: Announce new docs.
