--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: fixed typo in Gnome-schedule URL
+
 2006-01-03  Johan Dahlin  <jdahlin@async.com.br>
 
 	* applications.src: Add TorApplet
