use temporal mirror for tigrux's tutorial
2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * articles.src: use temporal mirror for tigrux's tutorial

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
+	* articles.src: use temporal mirror for tigrux's tutorial
+
+2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
 	* applications.src: added EveryGUI
 
 2006-01-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
