--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-22  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: added Gnomolicious
+
 2006-01-18  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* articles/cairo-pygtk-widget-signals-es
