--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Added piviti and flumotion.
+
 2006-01-27  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src:
