Reorder apps and change sections again.
2006-01-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * applications.src: Reorder apps and change sections again.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
+	* applications.src: Reorder apps and change sections again.
+
+2006-01-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
 	* applications.src: Added Istanbul and Seamless.
 
 2006-01-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
