Change PySudoku to Python Sudoku and fix URL.
2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * applications.src: Change PySudoku to Python Sudoku and fix URL.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Change PySudoku to Python Sudoku and fix URL.
+
 2006-01-30  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Reorder apps and change sections again.
