Update UPS Monitor URL.
2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * applications.src: Update UPS Monitor URL.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
+	* applications.src: Update UPS Monitor URL.
+
+2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
 	* applications.src: Update RTGraph URL.
 
 2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
