--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-09  Johan Dahlin  <jdahlin@async.com.br>
+
+	* applications.src: Add Gnome Catalog
+
 2006-01-31  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Update UPS Monitor URL.
