--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Add GPixPod
+
 2006-02-09  Johan Dahlin  <jdahlin@async.com.br>
 
 	* applications.src: Add Gnome Catalog
