--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-21  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Add JonoEdit
+
 2006-02-13  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Add GPixPod
