--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-23  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Changed JonoEdit to Jokosher and its URL
+
 2006-02-21  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Add JonoEdit
