--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Add FUPlayer
+
 2006-02-27  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* newsitems.py: Added new article by Lawrence Oluyede to news.
