--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-03-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
+	* applications.src: Add Listen
+
+2006-03-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
 	* applications.src: Add FUPlayer
 
 2006-02-27  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
