--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-24  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Add mezoGIS
+
 2006-03-22  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Add GL O.B.S.
