Improve GL O.B.S. text
2006-03-24  Rafael Villar Burke  <pachi@mmn-arquitectos.com>

        * applications.src: Improve GL O.B.S. text

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-03-24  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
+	* applications.src: Improve GL O.B.S. text
+
+2006-03-24  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
 	* applications.src: Add mezoGIS
 
 2006-03-22  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
