--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-27  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Add Alacarte
+
 2006-03-24  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Improve GL O.B.S. text
