--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-30  Johan Dahlin  <jdahlin@async.com.br>
+
+	* newsitems.py (item): PyGTK 2.8.4
+
 2006-03-27  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Add Alacarte
