--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-12  Johan Dahlin  <jdahlin@async.com.br>
+
+	* newsitems.py (item): PyGTK 2.8.6
+
 2006-04-07  Johan Dahlin  <jdahlin@async.com.br>
 
 	* head.src: 
@@ -10,7 +14,7 @@
 
 2006-03-30  Johan Dahlin  <jdahlin@async.com.br>
 
-	* newsitems.py (item): PyGTK 2.8.4
+	* newsitems.py (item): PyGTK 2.8.5
 
 2006-03-27  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
