--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-18  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Update Pida information
+
 2006-04-12  Johan Dahlin  <jdahlin@async.com.br>
 
 	* newsitems.py (item): PyGTK 2.8.6
