--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-23  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Add Wine doors
+
 2006-05-19  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* articles.src: Add new article pygtk-glade-gui
