--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-29  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* applications.src: Update pyconsole URL
+
 2006-05-23  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* applications.src: Add Wine doors
