--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-04  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
+
+	* newsitems.py: Write correct article entry
+
 2006-06-03  Rafael Villar Burke  <pachi@mmn-arquitectos.com>
 
 	* articles.src: Add new article application-pygtk-glade
